--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
       
-    <link rel="stylesheet" type="text/css" href="estilo4.css">
+    <link rel="stylesheet" type="text/css" href="estilo.css">
 
     <title> Site New</title>
       
