--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<html>
 	<head>
 		 <meta charset="utf-8">
+		 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 		 <link rel="stylesheet" href="css/bootstrap.min.css">
       
          <link rel="stylesheet" type="text/css" href="estilo.css"><!--Nossa própria folha de estilo -->
