--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <i class="menu_close fa fa-times fa-lg"></i>
       </span>
       <ul class="menu_items">
-       <li ><a href="#"><i class="icon fa fa-home fa-2x"></i> Moar</a></li>
-       <li ><a href="#"><i class="icon fa fa-phone fa-2x"></i> Coffee</a></li>
-       <li ><a href="#"><i class="icon fa fa-heart fa-2x"></i> Please</a></li>
-       <li ><a href="#"><i class="icon fa fa-heart fa-2x"></i> teste</a></li>
+       <li ><a href="#"><i class=""></i> Moar</a></li>
+       <li ><a href="#"><i class=""></i> Coffee</a></li>
+       <li ><a href="#"><i class=""></i> Please</a></li>
+       <li ><a href="#"><i class=""></i> teste</a></li>
       </ul>
      
    </div>
