--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <link rel="stylesheet" href="css/bootstrap.min.css">
       
-         <link rel="stylesheet" type="text/css" href="nun.css"><!--Nossa própria folha de estilo -->
+         <link rel="stylesheet" type="text/css" href="estilo.css"><!--Nossa própria folha de estilo -->
 
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Tipo um bootstrap, folha de estilo -->
     
