--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               influênciam na política de um País. <br> Assim, o espaço em que nos encontramos pode orientar todo
               o futuro e dinâmicas de uma nação. Por exemplo, este país possui acesso à rotas marítimas, acesso ao mar. 
               Este país possui grandes reservas de petróleo, o chamdo ouro preto. Estas questões podem afetar diretamente
-              o curso histórico do país, ou seja, geopolítica é a relação geográfica e a causalidade histórica. 
+              o curso histórico do país, ou seja, geopolítica é a relação geográfica e a causalidade histórica, teste. 
 
            </p>
 
