--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
            <p class="texto text-justify">
               
            Seguindo à diante, outro conceito muito importante que será usado com frequência é o de tabuleiro geopolítico. O tabuleiro geopolítico pode ser definido, de maneira simples, como o jeito que as relações geopolíticas estão estabelecidas. Calma, não surte, vamos simplificar mais. <br> <br>
-           Lembra da Guerra Fria? Um embate épico entre capitalismo x socialismo, URSS x EUA, muito provavelmente você deve ter visto em sala de aula, caso não se recorde, clique aqui para um resumo rápido. Pois é, esta Guerra Fria fez com que até os dias de hoje haja uma tensão entre os Estados Unidos e a Rússia. Está é uma característica do atual tabuleiro geopolítica, uma “rusga” diplomática, que atualmente vêm sendo muito comentada nos jornais e no campo geopolítico.   
+           Lembra da Guerra Fria? Um embate épico entre capitalismo x socialismo, URSS x EUA, muito provavelmente você deve ter visto em sala de aula. Pois é, esta Guerra Fria fez com que até os dias de hoje haja uma tensão entre os Estados Unidos e a Rússia. Está é uma característica do atual tabuleiro geopolítica, uma “rusga” diplomática, que atualmente vêm sendo muito comentada nos jornais e no campo geopolítico.   
            </p>
 
            <p class="texto text-justify">
