--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
               <h1 class="fw-light">Feliz Dia dos Pais</h1>
-              <p class="lead text-muted"> Pai, por mais que eu ainda não esteja milhonário para te dar uma rino, nem tenha muito tempo de fazer algo elaborado. Tentei fazer algo diferente, Feliz dia dos Pais!!!!!</p>
+              <p class="lead text-muted"> Pai, por mais que eu ainda não esteja milionário para te dar uma rino, nem tenha muito tempo de fazer algo elaborado. Tentei fazer algo diferente, Feliz dia dos Pais!!!!!</p>
               
             </div>
           </div>
