--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 ser adulto é difícil, e quão bons pais você e a mãe são. Principalmente, se for levado em conta a idade que  
                 a fábrica começou e como a vida foi bem desafiante para os dois. Posso ser complicado, quieto e ter alguns muitos 
                 aspectos que você não compreenda, mas o que nos liga é muito mais forte que qualquer adversidade. Bom trabalho, te amo. A, esta 
-                página está programada para se alto destruir 15seg depois que essa parte final for lida, para esse eu te amo não vazar. Não posso perder a pose de mal.
+                página está programada para se autodestruir 15seg depois que essa parte final for lida, para esse eu te amo não vazar. Não posso perder a pose de mal.
               </h4>
               
                 
