--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
               </div>
 
-              <h4 class="blog-post-title mb-1">Pai, por mais que nimguém seja perfeito, cada  dia mais eu entendo como 
+              <h4 class="blog-post-title mb-1">Pai, por mais que ninguém seja perfeito, cada dia mais eu entendo como 
                 ser adulto é difícil, e quão bons pais você e a mãe são. Principalmente, se for levado em conta a idade que  
                 a fábrica começou e como a vida foi bem desafiante para os dois. Posso ser complicado, quieto e ter alguns muitos 
                 aspectos que você não compreenda, mas o que nos liga é muito mais forte que qualquer adversidade. Bom trabalho, te amo. A, esta 
